# MyCRM

./: .coverage  .coveragerc  .gitignore  .modularity-config.yaml  .pre-commit-config.yaml  ARCHITECTURE_REFACTORING_REPORT.md  CODE_QUALITY_GATE_SUMMARY.md  DATABASE_REFACTORING_REPORT.md  DATA_MODELS_IMPLEMENTATION_SUMMARY.md  DATA_MODELS_SUMMARY.md  DEPENDENCY_OPTIMIZATION.md  Makefile  MiniCRM_项目错误审查综合报告.md  NAVIGATION_LAYOUT_IMPLEMENTATION.md  PERFORMANCE_QUICKSTART.md  PROJECT_KANBAN.md  QUOTE_SERVICE_REFACTORING_REPORT.md  README.md  RESPONSIVE_LAYOUT_REFACTOR_PLAN.md  SUPPLIER_SERVICE_OPTIMIZATION_COMPLETE.md  SUPPLIER_SERVICE_REFACTOR_PLAN.md  TTK_组件错误修复任务列表.md  architecture_and_features.md  architecture_validation_report.md  cloudbaserc.json  coverage.xml  dependency_checker.py  fix_dependencies.py  fix_dependencies.sh  mypy.ini  mypy_report.txt  optimize_dependencies.sh  pyproject-dev.toml  pyproject.toml  quality_gate_report.md  ruff.toml  ruff_report.json  run_performance_tests.py  simple_dialog_test.py  split_responsive_layout.py  (+26 more)
.github/: branch-protection.md
.github/workflows/: ci.yml  code-quality.yml  quality-reports.yml
.kiro/hooks/: COMPATIBILITY_REPORT.md  README.md  auto-test-runner.json  auto-test-runner.kiro.hook  database-migration.md  db-migration-check.kiro.hook  dependency-check-hook.kiro.hook  dependency-checker.md  documentation-updater.md  hooks-config.json  manage-hooks.py  modern-code-quality.kiro.hook  performance-analysis-hook.kiro.hook  performance-profiler.md  test-runner.md  ui-component-validator.kiro.hook  ui-component-validator.md  unified-fixer-config.md  unified-python-fixer.kiro.hook  uv-dependency-manager.kiro.hook
.kiro/settings/: mcp.json
.kiro/steering/: code-generation-guidelines.md  minicrm-development-standards.md
.qoder/quests/: ttk-error-analysis.md
.qoder/rules/: python.md
.rules/: ProjectRule.md
.trae/rules/: project_rules.md
config/: page_config.json
docs/: CHINESE_PUNCTUATION_CODING_STANDARDS.md  CODE_QUALITY_CONFIG.md  DEPENDENCY_ADMISSION_RULES.md  PERFORMANCE_OPTIMIZATION.md  chart_widget_guide.md  error_handling_system_guide.md  form_component_system_guide.md  import_export_architecture.md  import_export_guide.md  modularity-guide.md  navigation_system_guide.md  performance_monitoring_guide.md  performance_optimization_guide.md  task10_completion_summary.md  task11_completion_summary.md  task3_completion_summary.md  task5_completion_summary.md  task6_service_integration_completion_summary.md  task8_completion_summary.md  task8_page_management_implementation.md  transfunctions-reference.md
docs/deployment/: deployment_guide.md  technical_documentation.md  user_guide.md
examples/: advanced_search_demo.py  async_patterns_usage.py  business_dialogs_demo.py  chart_widget_demo.py  contract_service_demo.py  data_table_ttk_demo.py  dialog_system_demo.py  error_handling_demo.py  finance_panel_ttk_demo.py  form_builder_demo.py  performance_integration_demo.py  performance_monitoring_usage.py  performance_optimization_demo.py  performance_usage_examples.py  quote_management_ttk_demo.py  search_bar_usage.py  simple_caching_demo.py  theme_system_demo.py  theme_usage_example.py  ui_performance_optimization_demo.py
reports/: daily_report_20250814_095440.md
scripts/: accurate_dependency_checker.py  architecture_check.py  check-code.sh  check-git-status.sh  check_code_quality.py  check_coverage.py  check_file_sizes.py  check_transfunctions_usage.py  clean-git-staging.py  final_dependency_checker.py  fix_chinese_punctuation.py  fix_transfunctions_usage.py  format-code.sh  github-commit-summary.md  migrate_dependencies.py  modularity_check.py  modularity_check_improved.py  performance-check.sh  pre-commit-check.py  quality-check-config.py  quality_alerts.py  quality_check_config.py  quality_monitor.py  quality_reporter.py  remove-ide-configs.py  run_urgent_fixes.sh  schedule_quality_tasks.py  setup-dev.sh  setup_branch_protection.py  test-config.sh  test-hooks-compatibility.sh  test_transfunctions_check.py  urgent_check_transfunctions.py  urgent_file_split.py  urgent_fix_qt_api.py  urgent_quality_gate.py  urgent_split_large_files.py  verify_dependencies.py
src/minicrm/: __init__.py  __main__.py  application.py  application_config.py  application_ttk.py  main.py
src/minicrm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/transfunctions/: __init__.py  async_patterns.py  document_processing.py  report_templates.py
tests/: README_verification_tests.md  __init__.py  conftest.py  run_complete_verification_suite.py  test_advanced_search_service.py  test_analytics_service.py  test_analytics_service_refactored.py  test_complete_functionality_verification.py  test_contract_service.py  test_customer_dao.py  test_customer_edit_simple.py  test_dao_exception_handler.py  test_dao_exception_handler_modern.py  test_finance_service.py  test_interaction_service.py  test_main_integration.py  test_main_startup.py  test_performance_integration.py  test_performance_integration_simple.py  test_quote_service.py  test_services.py  test_supplier_dao.py  test_supplier_finance_service.py  test_supplier_service.py  test_supplier_service_refactored.py  test_transfunctions.py  test_ttk_qt_feature_parity.py  test_user_interaction_automation.py
tests/integration/: test_navigation_integration.py
tests/performance/: README.md  main_performance_test.py  memory_usage_benchmark.py  performance_benchmark_framework.py  performance_report_generator.py  run_performance_benchmarks.py  startup_performance_test.py  test_page_management_performance.py
tests/test_application_ttk/: __init__.py  test_basic_functionality.py  test_minicrm_application_ttk.py
tests/test_config/: __init__.py  test_settings.py
tests/test_core/: __init__.py  test_constants.py  test_diagnostic_tool.py  test_exceptions.py  test_hooks.py  test_logging.py  test_system_monitor.py  test_ttk_error_handler.py  test_utils.py
tests/test_deployment/: run_all_deployment_tests.py  test_cross_platform_compatibility.py  test_end_to_end.py  (+2 more)
(+549 files in other folders)
